Claim APIs, Process claim API, generateStatement API, settleClaim API
