# src/main/java/com/healthcare/billing/model/Transaction.java
@@ -1,0 +1,87 @@
+package com.healthcare.billing.model;
+
+import java.util.Date;
+
+public class Transaction {
+    private String id;
+    private String claimId;
+    private int amount;
+    private String comments;
+    private String payerId;
+    private int payeeType;
+    private Date timeCreated;
+    private int transactionType;
+    private Currency currency;
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getClaimId() {
+        return claimId;
+    }
+
+    public void setClaimId(String claimId) {
+        this.claimId = claimId;
+    }
+
+    public int getAmount() {
+        return amount;
+    }
+
+    public void setAmount(int amount) {
+        this.amount = amount;
+    }
+
+    public String getComments() {
+        return comments;
+    }
+
+    public void setComments(String comments) {
+        this.comments = comments;
+    }
+
+    public String getPayerId() {
+        return payerId;
+    }
+
+    public void setPayerId(String payerId) {
+        this.payerId = payerId;
+    }
+
+    public int getPayeeType() {
+        return payeeType;
+    }
+
+    public void setPayeeType(int payeeType) {
+        this.payeeType = payeeType;
+    }
+
+    public Date getTimeCreated() {
+        return timeCreated;
+    }
+
+    public void setTimeCreated(Date timeCreated) {
+        this.timeCreated = timeCreated;
+    }
+
+    public int getTransactionType() {
+        return transactionType;
+    }
+
+    public void setTransactionType(int transactionType) {
+        this.transactionType = transactionType;
+    }
+
+    public Currency getCurrency() {
+        return currency;
+    }
+
+    public void setCurrency(Currency currency) {
+        this.currency = currency;
+    }
+}
